@@ -71,6 +71,7 @@ v30.0.00
         Planner: fixed Teacher Notes in smart blocks not visible when using the Show Confidential Data toggle
         Planner: fixed access to class list in Edit Unit when viewing past and upcoming years
         Staff: fixed coverage longer than one week not including staff duty and activity cover
+        Staff: fixed order of Staff Directory to honour the biographicalGroupingOrder setting
         Timetable Admin: fixed missing Manage Exceptions button on the timetable in Course Enrolment by Person
         Timetable Admin: fixed the issue of setting white as the default color for both background and font
 
